<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_textFive"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/btn_textColor"
        android:background="@drawable/bg_button"
        app:backgroundTint="@null"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/btn_textColor"
        android:textSize="22sp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button"
        app:backgroundTint="@null"
        android:text="@string/button_textFour"
        app:layout_constraintBottom_toBottomOf="@+id/btn_five"
        app:layout_constraintEnd_toStartOf="@+id/btn_five"
        app:layout_constraintTop_toTopOf="@+id/btn_five"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/button_textSix"
        android:textColor="@color/btn_textColor"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/btn_five"
        app:layout_constraintStart_toEndOf="@+id/btn_five"
        app:layout_constraintTop_toTopOf="@+id/btn_five"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:background="@drawable/bg_button"
        android:text="@string/button_textTwo"
        android:textColor="@color/btn_textColor"
        app:backgroundTint="@null"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/button_textOne"
        android:textColor="@color/btn_textColor"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/btn_two"
        app:layout_constraintEnd_toStartOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_two"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="22sp"
        android:background="@drawable/bg_button"
        android:text="@string/button_textThree"
        android:textColor="@color/btn_textColor"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/btn_two"
        app:layout_constraintStart_toEndOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_two"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/button_textEight"
        android:textColor="@color/btn_textColor"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_five"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/button_textSeven"
        android:textColor="@color/btn_textColor"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/btn_eight"
        app:layout_constraintEnd_toStartOf="@+id/btn_eight"
        app:layout_constraintTop_toTopOf="@+id/btn_eight"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/button_textNine"
        android:textColor="@color/btn_textColor"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/btn_eight"
        app:layout_constraintStart_toEndOf="@+id/btn_eight"
        app:layout_constraintTop_toTopOf="@+id/btn_eight"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button"
        android:textSize="22sp"
        android:text="@string/button_textZero"
        android:textColor="@color/btn_textColor"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eight"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="22sp"
        android:background="@drawable/bg_button"
        android:text="@string/button_textSign"
        android:textColor="@color/btn_textColor"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/btn_zero"
        app:layout_constraintEnd_toStartOf="@+id/btn_zero"
        app:layout_constraintTop_toTopOf="@+id/btn_zero"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button"
        android:textSize="22sp"
        android:text="@string/button_textOk"
        android:textColor="@color/btn_textColor"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/btn_zero"
        app:layout_constraintStart_toEndOf="@+id/btn_zero"
        app:layout_constraintTop_toTopOf="@+id/btn_zero"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="317dp"
        android:id="@+id/editText"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="200dp"
        android:textColor="@color/editText_color"
        android:textSize="22sp"
        android:maxLength="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/text_editText"
        android:gravity="center"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>